edit title and remove():functionality

--- a/todo-vanilla/index.html
+++ b/todo-vanilla/index.html
@@ -28,7 +28,7 @@
           </button>
         </form>
       </div>
-      <div id="show-todos"></div>
+      <div id="show-todos" class="row align-items-start"></div>
     </div>
     <script src="script.js"></script>
     <script
